# c-thedral

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  Makefile  Makefile.am  README  cathedral.c  configure.ac
.github/workflows/: make-check.yml
include/cthedral/: bitboard.h  pbb.h  pieces.h  placement_gen.h
include/tap++/: tap++.h
src/: Makefile.am  bitboard.c  bitboard.h  cathedral.c  main.c  pbb.c  pieces.c  pieces.h  placement_gen.c  placement_gen.h  util.c  util.h
test/: cthedral_tests.c  placement_array_size.c  placement_array_size.test.c  tap++.cc  test_bb_and.c  test_bb_and.cc  test_bb_cmp.c  test_bb_cmp.cc  test_bb_copy.c  test_bb_copy.cc  test_bb_eq_ne.c  test_bb_eq_ne.cc  test_bb_is_placement.cc  test_bb_or.c  test_bb_or.cc  test_bb_xor.c  test_bb_xor.cc  test_bitboard.c  test_generate_placement_array.c  test_generate_placement_array.cc  test_placement_array_size.c  test_placement_array_size.cc  test_placement_gen.c
